# hs-playground

./: README.md  hs-playground.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
