name:                hs-playground
version:             0.1.0.0
synopsis:            Haskell Playground
description:         Please see README.md
homepage:            https://github.com/ezhulenev/hs-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Eugene Zhulenev
maintainer:          eugene.zhulenev@example.com
copyright:           Copyright: (c) 2016 Eugene Zhulenev
category:            Haskell
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall -O2
  build-depends:       base             >= 4.7      && < 5
                     , reflection       >= 1.3      && < 3
                     , mtl              >= 2.2.1
                     , semigroupoids    >= 4        && < 6
                     , semigroups       >= 0.8.4    && < 1
                     , vector           >= 0.9      && < 0.12

  default-language:    Haskell2010

executable hs-playground
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hs-playground
  default-language:    Haskell2010

test-suite hs-playground-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-playground
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ezhulenev/hs-playground
